; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_dns-type.c_dns_class_to_string.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_dns-type.c_dns_class_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"IN\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ANY\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @dns_class_to_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %7 [
    i32 128, label %5
    i32 129, label %6
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %8

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %8

8:                                                ; preds = %7, %6, %5
  %9 = load i8*, i8** %2, align 8
  ret i8* %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
